--- a/INSTALL
+++ b/INSTALL
@@ -3,7 +3,7 @@
 ----------------------------------||== INSTALL ==||---------------------------------- 
 ----------------------------------/               \----------------------------------
 
-1.1- Install dependencies
+1- Install dependencies
 
   - libv4l-dev
   - libx11-dev
@@ -18,21 +18,41 @@
   $ sudo apt install libxext-dev
   $ sudo apt install libjpeg-dev
 
-1.2- Build and install mmstreamer
+2- Build / Reset
 
-  $ cd <path_to_root_directory>
-  $ make all install
+  2.1- Build and install mmstreamer
 
-  Note: <path_to_root_directory>/out/ is created. It contains:
-    - build/      : build informations
-    - mmstreamer/ :
-        |
-        --> Application's binary in bin/
-        |
-        --> .h files in inc/ (to use dynamic libraries)
-        |
-        --> Dynamic libraries in lib/ (Can be used alone; no need of other modules)
-        |
-        --> Xml config files in res/
+    $ cd <path_to_root_directory>
+    $ make all install
 
-     - mmstreamer.tar.gz : mmstreamer/ packaged
+    Note: <path_to_root_directory>/out/ is created. It contains:
+      - build/      : build informations
+      - mmstreamer/ :
+          |
+          --> Application's binary in bin/
+          |
+          --> .h files in inc/ (to use dynamic libraries)
+          |
+          --> Dynamic libraries in lib/ (Can be used alone; no need of other modules)
+          |
+          --> Xml config files in res/
+
+       - mmstreamer.tar.gz : mmstreamer/ packaged
+
+  2.2- Clean build directory
+
+    $ cd <path_to_root_directory>
+    $ make clean-all
+
+    or
+
+    $ make mrproper-all
+
+  2.3- Clean a particular module
+
+    $ cd <path_to_root_directory>
+    $ make -f build/Makefile.<xxx> clean-<xxx>
+
+    or
+
+    $ make -f build/Makefile.<xxx> mrproper-<xxx>
