[DEV] Rework SDL2-based drawer to better use SDL2 library + minor changes

--- a/README
+++ b/README
@@ -61,7 +61,7 @@ and display it locally and/or stream it over another network interface.
 
  cvlc v4l2:///dev/video0:chroma=mjpg:width=640:height=480 --sout '#std{access=http{mime
  =multipart/x-mixed-replace;boundary=--7b3cc56e5f51db803f790dad720ed50a},mux=mpjpeg,dst
- =127.0.0.1:8090}'
+ =127.0.0.1:9090/webcam}'
 
 Another example is providing an external library in which a server is running to be an
 intermediate between mmstreamer engine and remote devices.
