[DEV] SDL2-based drawer : Add support of .png format + minor changes

--- a/INSTALL
+++ b/INSTALL
@@ -7,20 +7,26 @@
 
   1.1- Needed packages
 
+    - build-essential
     - libv4l-dev
     - libx11-dev
     - libxext-dev
-    - libjpeg-dev
+    - libjpeg8-dev
+    - libpng16-dev
+    - zlib1g
 
     Example on ubuntu 16.04:
 
     $ sudo apt update
+    $ sudo apt install build-essential
     $ sudo apt install libv4l-dev
     $ sudo apt install libx11-dev
     $ sudo apt install libxext-dev
-    $ sudo apt install libjpeg-dev
+    $ sudo apt install libjpeg8-dev
+    $ sudo apt install libpng16-dev
+    $ sudo apt install zlib1g-dev
 
-  1.2- Maybe necessary to build SDL2_ttf (in case v2 of Drawer is used)
+  1.2- Maybe necessary to build SDL2_ttf (in case SDL2-based drawer is used)
 
     Create symbolic link to libGL.so.1
 
@@ -32,10 +38,10 @@
 
   2.1- Build and install mmstreamer
 
-    $ cd <path_to_root_directory>
+    $ cd <path_to_mmstreamer_sources>
     $ make all install
 
-    Note: <path_to_root_directory>/out/ is created. It contains:
+    Note: <path_to_mmstreamer_sources>/out/ is created. It contains:
       - build/      : build informations
       - mmstreamer/ :
           |
@@ -51,7 +57,7 @@
 
   2.2- Clean build directory
 
-    $ cd <path_to_root_directory>
+    $ cd <path_to_mmstreamer_sources>
     $ make clean-all
 
     or
@@ -60,9 +66,12 @@
 
   2.3- Clean a particular module
 
-    $ cd <path_to_root_directory>
+    $ cd <path_to_mmstreamer_sources>
     $ make -f build/Makefile.<xxx> clean-<xxx>
 
     or
 
     $ make -f build/Makefile.<xxx> mrproper-<xxx>
+
+    <xxx> : vid, deps, net, gfx, ... respectively for "Videos", "Dependencies",
+            "Network", "Graphics", ...
