--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 ----------------------------------||== README ==||----------------------------------
 ----------------------------------/              \----------------------------------
 
-0- Where to begin
+0- What to read first ?
 
 - INSTALL : Prepare your environment and build mmstreamer project
 - HOWTO   : Run mmstreamer + update configuration files
